@@ -11,6 +11,8 @@ TBD
 	* bugfix #562: ldns-keygen match DSA key maximum size with library.
 	  And check keysizes with all algorithms. Thanks Peter Koch.
 	* ldns-verify-zone accepts only one single zonefile as argument.
+	* bugfix #573: ldns-keygen write private keys with mode 0600.
+	  Thanks Leon Weber
 
 1.6.17	2014-01-10
 	* Fix ldns_dnssec_zone_new_frm_fp_l to allow the last parsed line of a
